--- a/frontend/punto_venta/src/index.css
+++ b/frontend/punto_venta/src/index.css
@@ -15,6 +15,11 @@ img {
 .content-principal {
   background-color: white;
 }
+/*----------------------Banner----------------------------*/
+.bannerIMG img{
+  width: 90%;
+  height: 90%;
+}
 
 /*----------------------CABECERA Y NAV-----------------------*/
 /*ESTILOS CABECERA*/
