Se agregaron pestanias para detalle venta, y para usuarios.

--- a/frontend/punto_venta/src/index.css
+++ b/frontend/punto_venta/src/index.css
@@ -511,3 +511,233 @@ input[type="button"] {
   background-color: #c82333; /* Rojo más oscuro al pasar el mouse */
 }
 /* ---------------------- FIN Estilos pestaña de Trabajadores ----------------------- */
+/* ---------------------- Estilos pestaña de Usuarios ----------------------- */
+
+/* ESTILOS de tabla */
+.tabla-usuarios {
+  width: 80%;
+  margin: 20px auto;
+  border-collapse: collapse;
+  box-shadow: 0px 0px 6px #ddd;
+}
+
+.tabla-usuarios th,
+.tabla-usuarios td {
+  padding: 12px 15px;
+  text-align: center;
+  border: 1px solid #ddd;
+}
+
+.tabla-usuarios th {
+  background-color: #f4f4f4;
+  color: #333;
+  font-weight: bold;
+}
+
+.tabla-usuarios td {
+  background-color: #fff;
+  color: #333;
+}
+
+.tabla-usuarios tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+/* ESTILOS de formulario de usuarios */
+.form-usuarios {
+  width: 80%;
+  margin: 20px auto;
+}
+
+.inputs-usuarios {
+  display: flex;
+  flex-wrap: wrap; /* Permite que los elementos se envuelvan a medida que el ancho del contenedor cambia */
+  justify-content: space-between; /* Espaciado entre los elementos */
+  gap: 10px;
+}
+
+.inputs-usuarios input[type="text"],
+.inputs-usuarios input[type="password"],
+.inputs-usuarios input[type="email"] {
+  flex: 1; /* Para que los inputs y selectores ocupen todo el espacio disponible */
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  background: #f6f7f9;
+  color: #333;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+.inputs-usuarios input[type="text"]:focus,
+.inputs-usuarios input[type="password"]:focus,
+.inputs-usuarios input[type="email"]:focus {
+  border-color: #333;
+}
+
+.buttons {
+  margin-top: 10px; /* Espacio superior para separar los botones del contenido superior */
+  text-align: center; /* Alineación de los botones al centro */
+}
+
+.buttons button {
+  margin: 0 5px; /* Espacio entre los botones */
+  padding: 10px 20px;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.buttons button:hover {
+  background-color: #333;
+}
+
+.tabla-usuarios .accion-buttons {
+  display: flex;
+  justify-content: space-between; /* Espacio entre los botones */
+}
+
+.tabla-usuarios .accion-buttons button {
+  padding: 8px 15px;
+  margin-right: 2px; /* Separación de 2px entre botones */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.tabla-usuarios .accion-buttons button.editar {
+  background-color: #ffc107; /* Amarillo */
+  color: #333;
+}
+
+.tabla-usuarios .accion-buttons button.editar:hover {
+  background-color: #ffca2c; /* Amarillo más claro al pasar el mouse */
+}
+
+.tabla-usuarios .accion-buttons button.eliminar {
+  background-color: #dc3545; /* Rojo */
+  color: #fff;
+  cursor: not-allowed; /* Muestra que el botón está deshabilitado */
+}
+
+/* ---------------------- FIN Estilos pestaña de Usuarios ----------------------- */
+/* ---------------------- Estilos pestaña de Detalle de Venta ----------------------- */
+
+/* ESTILOS de tabla */
+.tabla-detalle-venta {
+  width: 80%;
+  margin: 20px auto;
+  border-collapse: collapse;
+  box-shadow: 0px 0px 6px #ddd;
+}
+
+.tabla-detalle-venta th,
+.tabla-detalle-venta td {
+  padding: 12px 15px;
+  text-align: center;
+  border: 1px solid #ddd;
+}
+
+.tabla-detalle-venta th {
+  background-color: #f4f4f4;
+  color: #333;
+  font-weight: bold;
+}
+
+.tabla-detalle-venta td {
+  background-color: #fff;
+  color: #333;
+}
+
+.tabla-detalle-venta tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+/* ESTILOS de formulario de detalles de venta */
+.form-detalle-venta {
+  width: 80%;
+  margin: 20px auto;
+}
+
+.inputs-detalle-venta {
+  display: flex;
+  flex-wrap: wrap; /* Permite que los elementos se envuelvan a medida que el ancho del contenedor cambia */
+  justify-content: space-between; /* Espaciado entre los elementos */
+  gap: 10px;
+}
+
+.inputs-detalle-venta input[type="text"],
+.inputs-detalle-venta input[type="number"],
+.inputs-detalle-venta select {
+  flex: 1; /* Para que los inputs y selectores ocupen todo el espacio disponible */
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  background: #f6f7f9;
+  color: #333;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+.inputs-detalle-venta input[type="text"]:focus,
+.inputs-detalle-venta input[type="number"]:focus,
+.inputs-detalle-venta select:focus {
+  border-color: #333;
+}
+
+.buttons {
+  margin-top: 10px; /* Espacio superior para separar los botones del contenido superior */
+  text-align: center; /* Alineación de los botones al centro */
+}
+
+.buttons button {
+  margin: 0 5px; /* Espacio entre los botones */
+  padding: 10px 20px;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.buttons button:hover {
+  background-color: #333;
+}
+
+.tabla-detalle-venta .accion-buttons {
+  justify-content: space-between; /* Espacio entre los botones */
+}
+
+.tabla-detalle-venta .accion-buttons button {
+  padding: 8px 15px;
+  margin-right: 10px; /* Separación de 2px entre botones */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.tabla-detalle-venta .accion-buttons button.editar {
+  background-color: #ffc107; /* Amarillo */
+  color: #333;
+}
+
+.tabla-detalle-venta .accion-buttons button.editar:hover {
+  background-color: #ffca2c; /* Amarillo más claro al pasar el mouse */
+}
+
+.tabla-detalle-venta .accion-buttons button.eliminar {
+  background-color: #dc3545; /* Rojo */
+  color: #fff;
+}
+
+.tabla-detalle-venta .accion-buttons button.eliminar:hover {
+  background-color: #c82333; /* Rojo más oscuro al pasar el mouse */
+}
+
+/* ---------------------- FIN Estilos pestaña de Detalle de Venta ----------------------- */
