--- a/frontend/punto_venta/src/index.css
+++ b/frontend/punto_venta/src/index.css
@@ -98,7 +98,7 @@ img {
 nav .dropdown-menu {
   display: flex;
   flex-direction: column;
-  height: 530px;
+  height: 600px;
   position: absolute;
   top: 117%;
   left: -12px;
@@ -1263,3 +1263,116 @@ input[type="button"] {
   background-color: #c82333;
 }
 /* ---------------------- FIN Estilos pestaña de Pedido Apartado ----------------------- */
+/* ---------------------- Estilos pestaña de Detalle Pedido Apartado ----------------------- */
+
+/* ESTILOS de tabla */
+.tabla-detalle-pedido-apartado {
+  width: 80%;
+  margin: 20px auto;
+  border-collapse: collapse;
+  box-shadow: 0px 0px 6px #ddd;
+}
+
+.tabla-detalle-pedido-apartado th,
+.tabla-detalle-pedido-apartado td {
+  padding: 12px 15px;
+  text-align: center;
+  border: 1px solid #ddd;
+}
+
+.tabla-detalle-pedido-apartado th {
+  background-color: #f4f4f4;
+  color: #333;
+  font-weight: bold;
+}
+
+.tabla-detalle-pedido-apartado td {
+  background-color: #fff;
+  color: #333;
+}
+
+.tabla-detalle-pedido-apartado tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+/* ESTILOS de formulario de detalle pedido apartado */
+.form-detalle-pedido-apartado {
+  width: 80%;
+  margin: 20px auto;
+}
+
+.inputs-detalle-pedido-apartado {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.inputs-detalle-pedido-apartado input[type="number"],
+.inputs-detalle-pedido-apartado select {
+  flex: 1;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  background: #f6f7f9;
+  color: #333;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+.inputs-detalle-pedido-apartado input[type="number"]:focus,
+.inputs-detalle-pedido-apartado select:focus {
+  border-color: #333;
+}
+
+.buttons {
+  margin-top: 10px;
+  text-align: center;
+}
+
+.buttons button {
+  margin: 0 5px;
+  padding: 10px 20px;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.buttons button:hover {
+  background-color: #333;
+}
+
+.tabla-detalle-pedido-apartado .accion-buttons {
+  justify-content: space-between;
+}
+
+.tabla-detalle-pedido-apartado .accion-buttons button {
+  padding: 8px 15px;
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.tabla-detalle-pedido-apartado .accion-buttons button.editar {
+  background-color: #ffc107;
+  color: #333;
+}
+
+.tabla-detalle-pedido-apartado .accion-buttons button.editar:hover {
+  background-color: #ffca2c;
+}
+
+.tabla-detalle-pedido-apartado .accion-buttons button.eliminar {
+  background-color: #dc3545;
+  color: #fff;
+}
+
+.tabla-detalle-pedido-apartado .accion-buttons button.eliminar:hover {
+  background-color: #c82333;
+}
+/* ---------------------- FIN Estilos pestaña de Detalle Pedido Apartado ----------------------- */
